# parallel-n_grams

./: .gitignore  CMakeLists.txt  README.md  agent.md  gemini.md  profiling.sh  todo.md
exec/: AUBsanitizer.sh  Msanitizer.sh  debug_execution.sh  download_input.sh  download_test.sh  profiling.sh  release_execution.sh
parallel/: CMakeLists.txt
parallel/include/: arena.h  hash_table.h  main_functions.h  parameters.h  statistics.h
parallel/result_profiling/: profile.txt
parallel/src/: arena.c  hash_table.c  main.c  main_functions.c  my_utils.c  statistics.c
report/: main.tex
report/src/: 1-introduction.tex  2-sequential.tex  3-parallel.tex  4-analysis.tex  copertina.tex  preambolo.tex
sequential/: CMakeLists.txt
sequential/data/: input.txt  normalized_text.txt
sequential/include/: arena.h  hash_table.h  helper_functions.h  my_utils.h  statistics.h
sequential/result_profiling/: profile.txt
sequential/src/: arena.c  hash_table.c  helper_functions.c  main.c  main_functions.c  my_utils.c  statistics.c
